--- a/views/css/style.css
+++ b/views/css/style.css
@@ -42,19 +42,29 @@ body {
 
 .list {
   /*background-color: lightgray;*/
-  /*height: 10px;*/
-  width: 150px;
+  /*height: 15px;*/
+  /*font-size: 1.0rem;*/
+  width: 155px;
+  margin: 5px;
+  border: 1px solid black;
+  position: relative;
+  z-index: 1;
+  /*padding: 5px;*/
 }
 
 #searchBox{
   width: 150px;
 }
 
-.list div {
-  width:100%;
+.location-list {
+  width: 100%;
+  margin: auto;
+  padding: 5px;
   font-size: 1.0rem;
   height: 20px;
-  background:rgba(255,255,255,1.0)
+  background:rgba(255,255,255,1.0);
+  position: relative;
+  z-index: 1;
 }
 
 .grid-container {
