--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,6 +107,7 @@
 </script>
 
 <!-- Custom JS -->
+<!--<script type="text/javascript" src="js/combined-chart.js"></script>-->
 <script type="text/javascript" src="js/cases-chart.js"></script>
 <script type="text/javascript" src="js/deaths-chart.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
